# yolo12_simple_detect

./: .gitignore  GIF作成の処理フロー.md  README.md  README_SAHI_CLI.md  SAHI_detect.ipynb  SAHI_vs_PatchBased_Inference_Comparison.md  VALIDATION_GUIDE.md  YOLO_regression_model.code-workspace  detect.ipynb  detect_script.py  diagnose_difference.py  pyproject.toml  sahi_detect_cli.py  sahi_paper.txt  test_ultralytics.py  validate.py
patch_inference/: README.md  __init__.py  detector.py  visualizer.py
validation/: __init__.py  comparator.py  sahi_validator.py  ultralytics_validator.py
validation/utils/: __init__.py  coco_converter.py  metrics.py  visualization.py
